@@ -4,6 +4,7 @@ Changelog
 2.13.1 (unreleased)
 -------------------
 
+- Rewrite tests as unit tests.
 
 2.13.0 (2010-03-30)
 -------------------
